--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/slick.css">
-	<title>Author</title>
+	<title>Dogs Are The Greatest</title>
 </head>
 <body>
 
 	<!-- Navigation -->
 	<nav class="site-navigation">
 		<div class="site-navigation-inner site-container">
-			<img src="./images/site-logo.png" alt="site logo">
+			<img src="images/bowie-dog.jpg" alt="site logo">
 			<div class="main-navigation">
 				<ul class="main-navigation__ul">
-					<li><a href="#">Homepage</a></li>
-					<li><a href="#">Page 1</a></li>
-					<li><a href="#">Page 2</a></li>
-					<li><a href="#">Page 3</a></li>
-					<li><a href="#">Page 4</a></li>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Why dogs are the Greatest</a></li>
+					<li><a href="#">What makes them so Great</a></li>
+					<li><a href="#">Good Boy/Girl Gallery</a></li>
+					<li><a href="#">Contact Us</a></li>
 				</ul>
 			</div>
 			<div id="myBtn" class="burger-container" onclick="myFunction(this)">
