--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
 	<section class="fh5co-top-banner">
 		<div class="top-banner__inner site-container">
 			<div class="top-banner__image">
-				<img src="./images/top-banner-author.jpg" alt="author image">
+				<img src="images/rainbow-cube.jpg" alt="author image">
 			</div>
 			<div class="top-banner__text">
 				<div class="top-banner__text-up">
 					<span class="brand-span">Hello! I'm</span>
-					<h2 class="top-banner__h2">Jhone</h2>
+					<h2 class="top-banner__h2">Bowie</h2>
 				</div>
 				<div class="top-banner__text-down">
-					<h2 class="top-banner__h2">Smith</h2>
-					<span class="brand-span">Author, Writer, Traveler</span>
+					<h2 class="top-banner__h2">The Dog</h2>
+					<span class="brand-span">Cuddler, Companion, and of course, International Good Boy!</span>
 				</div>
-				<p>One Man. One Mission. Can He Go Beyond?One Man. One Mission. Can He Go Beyond?</p>
+				<p>One Dog. One Mission. Can He Go Beyond? One Man. One Mission. Can He Go Beyond?</p>
 				<a href="#" class="brand-button">Read bio > </a>
 			</div>
 		</div>
